# terver_2s

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  services.py
deploy/python/: Dockerfile
templates/: index.html  table.html
