[tool.poetry]
name = "terver_2s"
version = "0.1.0"
description = ""
authors = ["Mapc <mapctrigotixd@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.3"
fastapi = "^0.75.0"
Jinja2 = "^3.1.0"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
scipy = "^1.8.0"
bokeh = "^2.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
